--- a/css/all.css
+++ b/css/all.css
@@ -636,6 +636,7 @@ footer .btn:hover a, footer .active a {
 
 .article .sidebar .menu-link a {
   font-size: 20px;
+  display: inline-block;
 }
 
 @media (max-width: 768px) {
