--- a/css/all.css
+++ b/css/all.css
@@ -54,7 +54,7 @@ table {
   border-spacing: 0;
 }
 
-*, *::after*::before {
+*, *::after, *::before {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -343,6 +343,7 @@ footer .container {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 0;
 }
 
 @media (max-width: 768px) {
@@ -386,11 +387,11 @@ footer .border-1-primary-400 {
   border: 1px solid #C1C1C1;
 }
 
-footer .btn:hover, footer .active {
+footer .footer-btn:hover, footer .active {
   background: #000000;
 }
 
-footer .btn:hover a, footer .active a {
+footer .footer-btn:hover a, footer .active a {
   color: #fff;
 }
 
@@ -466,6 +467,292 @@ footer .btn:hover a, footer .active a {
     right: -30px;
     width: 50px;
   }
+}
+
+.card-list {
+  padding: 0 16px;
+}
+
+.card-list p {
+  color: #919191;
+  margin-bottom: 24px;
+}
+
+.card-list .card-tag {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0 16px;
+}
+
+@media (max-width: 992px) {
+  .card-list .card-tag {
+    gap: 0 8px;
+  }
+}
+
+.card-list .card-tag li {
+  padding: 4px 12px;
+  border-radius: 16px;
+  background: #f1f1f1;
+  text-align: center;
+  color: #3B3B3B;
+}
+
+.card-list-bg-op {
+  width: 526px;
+  height: 400px;
+  border-radius: 24px;
+  padding: 80px 40px 56px 40px;
+  background-color: rgba(255, 255, 255, 0.1);
+  z-index: 99;
+}
+
+.card-list-bg-op h3 {
+  line-height: 1.2;
+  color: #fff;
+}
+
+.card-list-bg-op p {
+  color: #fff;
+}
+
+.card-list-bg-op .card-tag {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0 16px;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #000;
+}
+
+@media (max-width: 992px) {
+  .card-list-bg-op .card-tag {
+    gap: 0 8px;
+  }
+}
+
+.card-list-bg-op .card-tag li {
+  padding: 4px 12px;
+  border-radius: 16px;
+  background: #fff;
+  text-align: center;
+  color: #3B3B3B;
+}
+
+.header-title {
+  padding-bottom: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 16px;
+}
+
+.header-title h2 {
+  font-weight: 600;
+  color: #3b3b3b;
+}
+
+.title-deco-left {
+  display: inline-block;
+  width: 100px;
+  height: 6px;
+  background-image: url("../../img/title-deco-left-lg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media (max-width: 768px) {
+  .title-deco-left {
+    background-image: url("../../img/title-deco-left-sm.png");
+    width: 56px;
+  }
+}
+
+.title-deco-right {
+  display: inline-block;
+  width: 100px;
+  height: 6px;
+  background-image: url("../../img/title-deco-right-lg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media (max-width: 768px) {
+  .title-deco-right {
+    background-image: url("../../img/title-deco-right-sm.png");
+    width: 56px;
+  }
+}
+
+.btn {
+  margin: 0 auto;
+  display: block;
+  text-align: center;
+  background: #000;
+  padding: 16px 32px;
+  color: #fff;
+  font-size: 20px;
+  border-radius: 5px;
+}
+
+.btn img {
+  display: inline-block;
+  margin-left: 8px;
+}
+
+.btn-md {
+  width: 178px;
+}
+
+.btn-lg {
+  width: 276px;
+}
+
+.home-banner-bg {
+  background-image: url("../img/hero-lg.png");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: auto;
+}
+
+.home-banner-content {
+  padding: 248px 24px 248px 0;
+  width: 430px;
+}
+
+.icon-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.work-introduction {
+  padding-top: 120px;
+}
+
+.work-introduction .work-intro-first-bg {
+  background-image: url("../img/homepage-work1-bg.png");
+  padding-top: 80px;
+}
+
+.work-introduction .work-intro-second-bg {
+  background-image: url("../img/homepage-work2-lg.png");
+  position: relative;
+  max-width: 100%;
+}
+
+.work-introduction .work-intro-second-bg::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: rgba(10, 16, 19, 0.5);
+  z-index: 1;
+  pointer-events: none;
+}
+
+.work-introduction .work-intro-third-bg {
+  background-image: url("../img/homepage-work3-bg.png");
+  position: relative;
+  max-width: 100%;
+}
+
+.work-introduction .work-intro-third-bg::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(10, 16, 19, 0.5);
+  z-index: 1;
+  pointer-events: none;
+}
+
+.work-introduction .work-intro-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.py-50 {
+  padding: 200px 0;
+}
+
+.my-50 {
+  margin: 200px 0;
+}
+
+.z-index-top {
+  z-index: 99;
+}
+
+.service-items {
+  padding: 120px 0;
+  background-image: url("../img/homepage-services-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.service-items .service-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 0 24px;
+}
+
+.service-items .service-content .service-item-first {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: url("../img/service-item-bg.png");
+  width: 306px;
+  height: 306px;
+  border-radius: 16px;
+}
+
+.service-items .service-content .service-item-first .service-item-visual {
+  text-align: center;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.service-items .service-content .service-item-first p {
+  color: #3B3B3B;
 }
 
 .banner {
@@ -704,6 +991,7 @@ footer .btn:hover a, footer .active a {
   background: #F1F1F1;
   padding: 4px 12px;
   border-radius: 16px;
+  color: #3B3B3B;
 }
 
 .border-bottom {
@@ -955,35 +1243,6 @@ footer .btn:hover a, footer .active a {
   border-right: 8px;
   margin-bottom: 16px;
   border-radius: 8px;
-}
-
-.work .card-list {
-  padding: 0 16px;
-}
-
-.work .card-list p {
-  color: #919191;
-  margin-bottom: 24px;
-}
-
-.work .card-tag {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 0 16px;
-}
-
-@media (max-width: 992px) {
-  .work .card-tag {
-    gap: 0 8px;
-  }
-}
-
-.work .card-tag li {
-  padding: 4px 12px;
-  border-radius: 16px;
-  background: #f1f1f1;
-  text-align: center;
 }
 
 .pagination {
