--- a/scss/page/_blog.scss
+++ b/scss/page/_blog.scss
@@ -136,6 +136,7 @@
       background: $primary-200;
       padding: 4px 12px;
       border-radius: 16px;
+      color: $primary-700;
     }
   }
 }
