--- a/css/all.css
+++ b/css/all.css
@@ -991,6 +991,7 @@ footer .footer-btn:hover a, footer .active a {
   background: #F1F1F1;
   padding: 4px 12px;
   border-radius: 16px;
+  color: #3B3B3B;
 }
 
 .border-bottom {
