--- a/css/all.css
+++ b/css/all.css
@@ -54,7 +54,9 @@ table {
   border-spacing: 0;
 }
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -67,7 +69,7 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 1296px;
+  max-width: 1320px;
   padding: 0 12px;
 }
 
@@ -842,7 +844,7 @@ footer .footer-btn:hover a, footer .active a {
 }
 
 .article .article-list {
-  width: calc(76.39% - 24px);
+  width: calc(75.46% - 12px);
 }
 
 @media (max-width: 992px) {
@@ -854,8 +856,18 @@ footer .footer-btn:hover a, footer .active a {
   }
 }
 
+.article .article-list img {
+  width: 306px;
+}
+
+@media (max-width: 992px) {
+  .article .article-list img {
+    width: 100%;
+  }
+}
+
 .article .sidebar {
-  width: calc(23.61% - 80px);
+  width: calc(24.54% - 12px);
   padding-top: 80px;
   padding-left: 80px;
   background: #FAFAFA;
@@ -991,7 +1003,6 @@ footer .footer-btn:hover a, footer .active a {
   background: #F1F1F1;
   padding: 4px 12px;
   border-radius: 16px;
-  color: #3B3B3B;
 }
 
 .border-bottom {
@@ -1243,6 +1254,35 @@ footer .footer-btn:hover a, footer .active a {
   border-right: 8px;
   margin-bottom: 16px;
   border-radius: 8px;
+}
+
+.work .card-list {
+  padding: 0 16px;
+}
+
+.work .card-list p {
+  color: #919191;
+  margin-bottom: 24px;
+}
+
+.work .card-tag {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0 16px;
+}
+
+@media (max-width: 992px) {
+  .work .card-tag {
+    gap: 0 8px;
+  }
+}
+
+.work .card-tag li {
+  padding: 4px 12px;
+  border-radius: 16px;
+  background: #f1f1f1;
+  text-align: center;
 }
 
 .pagination {
