--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,6 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap");
 
-*,*::after,*::before{
+*,
+*::after,
+*::before {
     box-sizing: border-box;
 }
 
@@ -12,10 +14,10 @@ body {
 
 .container {
     margin: 0 auto;
-    max-width: 1296px;
+    max-width: 1320px;
     padding: 0 12px;
 }
-p{
+p {
     text-align: justify;
 }
 a {
@@ -25,8 +27,8 @@ a {
 }
 
 img {
-     max-width: 100%;
-     height: auto;
-     display: block;
-     object-fit: cover;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    object-fit: cover;
 }
