--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,48 +1,53 @@
 footer {
-    background-image: url('../img/footer-bg-lg.png');
-    padding: 80px 0;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+  background-image: url("../img/footer-bg-lg.png");
+  padding: 80px 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  @include container-md {
+    padding: 40px 0;
+    background-image: url("../img/footer-bg-sm.png");
+  }
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     @include container-md {
-        padding: 40px 0;
-        background-image: url('../img/footer-bg-sm.png');
-       }
-    .container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0;
-        @include container-md {
-            flex-direction: column;
-           }
+      flex-direction: column;
+      padding: 0;
     }
-    header {
-        @include container-md {
-            margin-bottom: 40px;
-           }
-        img,p {
-            margin-bottom: $spacer-6;
-        }
+  }
+  header {
+    @include container-md {
+      margin-bottom: 40px;
+      img {
+        margin: 0 auto;
+      }
     }
-    .footer-sociality li{
-        padding: 8px 24px;
-        border-radius: 8px;
-        a{
-            display: flex;
-            align-items: center;
-            img {
-                margin-right: $spacer-2;
-            }
-        }
+    img,
+    p {
+      margin-bottom: $spacer-6;
     }
-    .border-1-primary-400 {
-        border: 1px solid $primary-400;
-    } 
-    .footer-btn:hover, .active{
-        background: $primary-900;
-        a{
-            color: #fff;
-        }
+  }
+  .footer-sociality li {
+    padding: 8px 24px;
+    border-radius: 8px;
+    a {
+      display: flex;
+      align-items: center;
+      img {
+        margin-right: $spacer-2;
+      }
     }
+  }
+  .border-1-primary-400 {
+    border: 1px solid $primary-400;
+  }
+  .footer-btn:hover,
+  .active {
+    background: $primary-900;
+    a {
+      color: #fff;
+    }
+  }
 }
