--- a/scss/abstracts/_mixin.scss
+++ b/scss/abstracts/_mixin.scss
@@ -2,27 +2,27 @@
     @media (max-width:1400px) {
         @content
     }
-}
+};
 @mixin container-xl{
     @media (max-width:1200px) {
         @content
     }
-}
+};
 @mixin container-lg{
     @media (max-width:992px) {
         @content
     }
-}
+};
 @mixin container-md{
     @media (max-width:768px) {
         @content
     }
-}
+};
 @mixin container-sm{
     @media (max-width:576px) {
         @content
     }
-}
+};
 @mixin container-xm{
     @media (max-width:426px) {
         @content
