--- a/scss/page/_index.scss
+++ b/scss/page/_index.scss
@@ -1,12 +1,23 @@
-.home-banner-bg {
-  background-image: url("../img/hero-lg.png");
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: auto;
-}
-.home-banner-content {
-  padding: 248px 24px 248px 0;
-  width: 430px;
+.home-banner {
+  display: flex;
+  justify-content: flex-end;
+  gap: 0 24px;
+  @include container-lg {
+    flex-direction: column-reverse;
+  }
+  .home-banner-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 12px;
+    width: 430px;
+    @include container-lg {
+      margin-left: 0;
+      width: 100%;
+      align-items: center;
+      padding: 40px 12px 104px;
+    }
+  }
 }
 .icon-list {
   display: flex;
@@ -17,7 +28,7 @@
     background-image: url("../img/homepage-work1-bg.png");
     padding-top: 80px;
   }
-  
+
   .work-intro-second-bg {
     background-image: url("../img/homepage-work2-lg.png");
     position: relative;
@@ -27,11 +38,11 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 50%; 
+      width: 50%;
       height: 100%;
-      background-color: rgba(10, 16, 19,0.5); 
-      z-index: 1; 
-      pointer-events: none; 
+      background-color: rgba(10, 16, 19, 0.5);
+      z-index: 1;
+      pointer-events: none;
     }
   }
   .work-intro-third-bg {
@@ -43,11 +54,11 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%; 
+      width: 100%;
       height: 100%;
-      background-color: rgba(10, 16, 19,0.5); 
-      z-index: 1; 
-      pointer-events: none; 
+      background-color: rgba(10, 16, 19, 0.5);
+      z-index: 1;
+      pointer-events: none;
     }
   }
   .work-intro-content {
@@ -64,7 +75,7 @@
   margin: 200px 0;
 }
 .z-index-top {
-  z-index:99;
+  z-index: 99;
 }
 
 .service-items {
@@ -81,7 +92,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-image: url('../img/service-item-bg.png');
+      background-image: url("../img/service-item-bg.png");
       width: 306px;
       height: 306px;
       border-radius: 16px;
@@ -92,10 +103,9 @@
         flex-direction: column;
         justify-content: center;
       }
-      p{
+      p {
         color: $primary-700;
       }
     }
   }
-
 }
